# cmpunlocker

./: .gitattributes  .gitignore  README.md  THIRD_PARTY_NOTICES.md  how-to-run.txt  install.sh  pyproject.toml
cmpunlock/: __init__.py  __main__.py  cli.py  elf.py  errors.py  firmware.py  payload.py  profile.py  system.py
cmpunlock/profiles/: 580.105.08.json  580.126.09.json  580.173.02.json
docs/: STUDY_NOTES.md
experimental/610-memory/: .gitignore  PATCH_NOTES.md  README.md  build-validator.sh  build.sh  install.sh  lib.sh  manifest.env  remove.sh  validate.sh
experimental/610-memory/patches/: 0001-cmp170hx-61043-experimental-memory.patch
experimental/610-memory/tests/: static.sh
experimental/610-memory/tools/: memory-pattern-test.cu  validate-memory.sh
tests/: conftest.py  test_610_memory_tools.py  test_cli.py  test_elf.py  test_firmware.py  test_install_script.py  test_official_firmware.py  test_payload.py  test_profile.py  test_system.py
tools/: sgemm_bench.cu
